--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                     <div class="parametro-senha-checkbox">
-                        <input name="maiusculo" type="checkbox" class="checkbox" >
+                        <input name="maiusculo" type="checkbox" class="checkbox" checked>
                         <label for="maiusculo">Letras maiúsculas</label>
                     </div>
                     <div class="parametro-senha-checkbox">
-                        <input name="minusculo" type="checkbox" class="checkbox">
+                        <input name="minusculo" type="checkbox" class="checkbox" checked>
                         <label for="minusculo">Letras minúsculas</label>
                     </div>
                     <div class="parametro-senha-checkbox">
-                  <input name="numero" type="checkbox" class="checkbox">
+                  <input name="numero" type="checkbox" class="checkbox" checked>
                         <label for="numero">Números</label>
                     </div>
                     <div class="parametro-senha-checkbox">
-                        <input name="simbolo" type="checkbox" class="checkbox">
+                        <input name="simbolo" type="checkbox" class="checkbox" checked>
                         <label for="simbolo">Símbolos</label>
                     </div>
                 </div>
